0.83.2
  - Fixed clip_key_modifier setting not working when it is
    set to alt, ctrl or shift in the SDL2 build. (Wengier)
  - Sending "Ctrl+Alt+Del" key from the menu will now reset
    the system within DOSBox-X when the intergrated DOS or a
    real DOS booted from a disk image is active. (Wengier)
  - PC speaker output fixed not to timeout and stop rendering
    unless the PC speaker output is not emitting anything
    audible anyway (Fix for Sopwith 1 and 2).
  - Added ALIAS command to define or display aliases.
  - Added -set command-line option to change config options.
    It can be specified multiple times for multiple options,
    overriding any options in the config file. For example,
    the command "dosbox-x.exe -set machine=pc98" will force
    DOSBox-X to start in PC-98 mode. (Wengier)
  - Re-added full drive menu items for the Windows platform.
    The "Boot from drive" item (A:, C: and D: drives only)
    should work in other platforms too. The BOOT command is
    also slightly improved. (Wengier)
  - INT 10h vector now points into VGA BIOS as a workaround
    for DOS programs that use vector location as part of
    their EGA/VGA detection. This fixes blink attribute
    and EGA/VGA detection failure with SuperCalc 3 and
    SuperCalc 4. This option, enabled by default, can be
    disabled or enabled from dosbox.conf.
  - Improved long filename (LFN) and SetFileAttr/GetFileAttr
    support for PC-98 mode. (Wengier)
  - The copy & paste Windows clipboard text via the right
    mouse button feature now has support for PC-98 mode too
    in addition to other modes. (Wengier)
  - Improved support for FluidSynth MIDI device by porting
    code from DOSBox ECE. Set "mididevice=fluidsynth" along
    with other required options such as "fluid.soundfont"
    in dosbox-x.conf to use it. The previous config setting
    "mididevice=synth" is still supported for alternative
    implementation of FluidSynth. (Wengier)

0.83.1