@@ -1,4 +1,8 @@
 0.83.2
+  - Added dosbox.conf to report drive Z: as a remote drive.
+    This can be used with Windows 95 installs to prevent
+    SCANDISK.EXE from attempting to scan and "repair" drive
+    Z: which not backed by a disk filesystem.
   - Fixed clip_key_modifier setting not working when it is
     set to alt, ctrl or shift in the SDL2 build. (Wengier)
   - Sending "Ctrl+Alt+Del" key from the menu will now reset
